[package]
name = "nebulet"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]

[package.metadata.bootimage]
default-target = "x86_64-nebulet.json"
output = "bootimage.bin"
run-command = [
    "qemu-system-x86_64",
    "-machine", "q35,accel=kvm:xen:hax:tcg",
    "-drive", "format=raw,file={}"
]
package-file = "userspace/target/wasm32-unknown-unknown/release/userspace.wasm"

[package.metadata.cargo-xbuild]
memcpy = true

[package.metadata.bootimage.bootloader]
git = "https://github.com/nebulet/bootloader"

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[profile.dev]
debug-assertions = true
panic = "abort"
opt-level = 3

[workspace]
members = [
    "tools",
    "lib/nebulet-derive",
]
exclude = [
    "target/x86_64-nebulet/release/bootloader",
    "target/x86_64-nebulet/debug/bootloader",
    "cretonne",
    "userspace",
]

[features]
default = ["vga", "serial"]
vga = [] # log to vga
serial = [] # log to serial

# Sources that may be trusted for providing entropy
# None of them are trusted by default
# The first working, trusted source will be used to seed,
# and periodically reseed, a CPRNG.
# http://blog.cr.yp.to/20140205-entropy.html
virtio_entropy = []
rdseed_entropy = []
jitter_entropy = []
rdrand_entropy = []

[dependencies]
spin = "0.4.6"
bitflags = "1.0"
bit_field = "0.9.0"
raw-cpuid = "3.1.0"
# x86_64 = "0.2.0-beta"
x86_64 = { git = "https://github.com/nebulet/x86_64" }
# os_bootinfo = "0.2.0"
os_bootinfo = { git = "https://github.com/nebulet/os_bootinfo" }
hashmap_core = "0.1.7"

# lib/
[dependencies.nebulet-derive]
path = "lib/nebulet-derive"

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]

[dependencies.rand_core]
version = "0.2"
default-features = false

[dependencies.rand]
version = "0.5"
default-features = false

[dependencies.nebulet_abi]
git = "https://github.com/nebulet/abi"

# Cretonne compiler
[dependencies.target-lexicon]
version = "0.0.2"
default-features = false

[dependencies.cretonne-codegen]
version = "0.12.0"
default-features = false
features = ["core"]

[dependencies.cretonne-frontend]
version = "0.12.0"
default-features = false
features = ["core"]

[dependencies.cretonne-wasm]
version = "0.12.0"
default-features = false
features = ["core"]

[dependencies.cretonne-native]
version = "0.12.0"
default-features = false
features = ["core"]

[dependencies.wasmparser]
version = "0.17.0"
default_features = false
features = ["core"]

[replace]
"hashmap_core:0.1.7" = { git = "https://github.com/lachlansneff/hashmap_core" }
